# honest-backtest

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: api-reference.md  architecture.md  index.md  overfitting-statistics.md  project-map.md  strategy-discovery-lab.md  strategy-lab-data-model.md  strategy-lab-experimental.md  strategy-lab-llm-loop.md  strategy-lab-roadmap.md  strategy-lab-runtime.md  strategy-lab-storage.md  use-cases.md  validation-bridge-contract.md
examples/: 01_lookahead_mirage.py  02_insample_collapse.py  03_cost_kills_edge.py  04_multiple_testing.py  05_adversarial_review.py  06_robustness_plateau.py  07_forward_log.py  08_deflated_sharpe.py  09_pbo_cscv.py  README.md
src/backtest_sanity/: __init__.py  _synth.py  adversarial.py  costs.py  data_checks.py  forward.py  overfit.py  robustness.py  significance.py  splits.py
src/strategy_lab/: __init__.py  cli.py  inventory.py  llm.py  llm_workflow.py  models.py  paths.py  registry.py
tests/: test_backtest_sanity.py  test_overfit.py  test_strategy_lab_inventory.py  test_strategy_lab_llm.py  test_strategy_lab_registry.py
