[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "honest-backtest"
version = "0.1.0"
description = "A layered validation architecture for backtests — catch look-ahead, in-sample mirage, costs and luck, plus AI adversarial review. One approach, not a panacea."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "krivonosoff161" }]
keywords = ["backtest", "quant", "validation", "walk-forward", "bootstrap", "overfitting", "trading", "ai"]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/krivonosoff161/honest-backtest"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
